--- a/miniprogram/components/subjectItem/subjectItem.wxml
+++ b/miniprogram/components/subjectItem/subjectItem.wxml
@@ -1,4 +1,4 @@
-<view class="total">
+<view class="total" bindtap="showDetail">
 
   <view>
     <text>{{subjectItem.title}}</text>
@@ -13,4 +13,8 @@
     </view>
   </view>
 
+</view>
+
+<view>
+  <v-subjectModel showModel="{{showModel}}" subjectItem="{{subjectItem}}" />
 </view>
