feat: 搜索框补充与个人信息布局

--- a/miniprogram/pages/profile/profile.wxml
+++ b/miniprogram/pages/profile/profile.wxml
@@ -1,2 +1,6 @@
-<!--miniprogram/pages/profile/profile.wxml-->
-<text>miniprogram/pages/profile/profile.wxml</text>
+<view>
+  <view>
+    <v-profileInfo />
+  </view>
+
+</view>
