--- a/miniprogram/components/search/search.wxml
+++ b/miniprogram/components/search/search.wxml
@@ -4,9 +4,9 @@
   </view>
   <view class="search">
     <image src="../../images/search.png" class="searchImg"></image>
-    <input placeholder="请输入搜索关键字"></input>
+    <input placeholder="请输入搜索关键字" class="searchInput"></input>
   </view>
   <view class="startSearch">
-    <button>搜索</button>
+    <button class="searchButton">搜索</button>
   </view>
 </view>
