feat: 用户授权登录实现

--- a/miniprogram/components/profileAction/profileAction.wxml
+++ b/miniprogram/components/profileAction/profileAction.wxml
@@ -11,3 +11,7 @@
     <view class="right">></view>
   </view>
 </view>
+
+<view>
+  <v-login modalShow="{{showLogin}}" bind:loginsuccess="onLoginSuccess" bind:loginfail="onLoginFail"></v-login>
+</view>
