--- a/miniprogram/components/squareItem/squareItem.wxml
+++ b/miniprogram/components/squareItem/squareItem.wxml
@@ -18,16 +18,11 @@
       <image src="../../images/comment.png" class="commentImg"></image>
       <view class="commentText">评论</view>
     </view>
-    <view class="share" catchtap="share">
-      <image src="../../images/share.png" class="shareImg"></image> 
-      <view class="shareText">分享</view>
+    <view catchtap="share" >
+      <button class="shareButton" open-type="share">
+        <image src="../../images/share.png" class="shareImg"></image> 
+          <text class="shareText">分享</text>
+      </button>
     </view>
   </view>
 </view>
-
-<!--
-<view>
-  <v-comment modalShow="{{showComment}}"></v-comment>
-  <v-login modalShow="{{showLogin}}" bind:loginsuccess="onLoginSuccess" bind:loginfail="onLoginFail"></v-login>
-</view>
--->
