--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -5,6 +5,10 @@
   text-align: center;
   background-color: #fff;
   color: #8a8a8a;
+  font-size: 22rpx;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .category {
   margin-top: 20rpx;
