--- a/miniprogram/components/subjectModel/subjectModel.wxss
+++ b/miniprogram/components/subjectModel/subjectModel.wxss
@@ -10,8 +10,8 @@
 }
 .main {
   width: 80%;
-  height: 80%;
-  margin: 60rpx auto;
+  height: 75%;
+  margin: 90rpx auto;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -24,6 +24,7 @@
   flex: 2;
   color: #707070;
   padding-top: 20rpx;
+  font-size: 40rpx;
 }
 .control {
   height: 50px;
@@ -36,4 +37,5 @@
   flex: 6;
   color: #707070;
   padding-top: 20rpx;
+  font-size: 40rpx;
 }
