--- a/miniprogram/components/search/search.wxml
+++ b/miniprogram/components/search/search.wxml
@@ -1,12 +1,12 @@
 <view class="total">
-  <view class="input">
+  <view class="input" bindtap="publish">
     <image src="../../images/input.png" class="inputImg"></image>
   </view>
   <view class="search">
     <image src="../../images/search.png" class="searchImg"></image>
-    <input placeholder="请输入搜索关键字" class="searchInput"></input>
+    <input placeholder="请输入搜索关键字" class="searchInput" bindinput="getKeyWord"></input>
   </view>
-  <view class="startSearch">
+  <view class="startSearch" bindtap="search">
     <button class="searchButton">搜索</button>
   </view>
 </view>
