--- a/miniprogram/components/profileAction/profileAction.wxss
+++ b/miniprogram/components/profileAction/profileAction.wxss
@@ -37,3 +37,26 @@
   font-size: 50rpx;
   color: #7d7d7d;
 }
+.model {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6);  
+}
+.main {
+  width: 80%;
+  height: 50%;
+  margin: 300rpx auto;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.push {
+  background-color: #1296db;
+  color: #fff;
+}
